[package]
name = "stcscan"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
dashmap = "5.5.3"
futures = "0.3"

[dev-dependencies]
mockito = "1.4.0"
tower = { version = "0.4", features = ["util"] }
